Bugfix: use 40px instead of 20px padding on lists to avoid cutting off the list numbers

--- a/sites/all/themes/mcneese/css/all/all-reset.css
+++ b/sites/all/themes/mcneese/css/all/all-reset.css
@@ -54,7 +54,7 @@ td, th, tr      { vertical-align: inherit; }
 s, strike, del  { text-decoration: line-through; }
 hr              { border: 1px inset; }
 ol, ul, dir,
-menu, dd        { margin: 0px; padding: 0px 0px 0px 20px; }
+menu, dd        { margin: 0px; padding: 0px 0px 0px 40px; }
 ol              { list-style-type: decimal; }
 ol ul, ul ol,
 ul ul, ol ol    { margin-top: 0px; margin-bottom: 0px; }
